--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "ext/tinyexr"]
 	path = ext/tinyexr
 	url = https://github.com/syoyo/tinyexr.git
+[submodule "ext/fpng"]
+	path = ext/fpng
+	url = https://github.com/richgel999/fpng.git
