implemented Hosek-Wilkie environment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ file(
     "ext/tinyexr/*"
     "ext/fpng/src/fpng.h"
     "ext/fpng/src/fpng.cpp"
+    "ext/hosek_wilkie_2013/*"
 )
 list(
     FILTER COMMON_SOURCES INCLUDE REGEX
@@ -159,6 +160,9 @@ function(set_common_sources)
     source_group(
         "non-essentials/ext/fpng" REGULAR_EXPRESSION
         "../ext/fpng/src/[^/]*\.(h|hpp|c|cpp)$")
+    source_group(
+        "non-essentials/ext/hosek_wilkie" REGULAR_EXPRESSION
+        "../ext/hosek_wilkie_2013/[^/]*\.(h|hpp|c|cpp)$")
     source_group(
         "non-essentials/ext/tinyexr/miniz" REGULAR_EXPRESSION
         "../ext/tinyexr/deps/miniz/[^/]*\.(h|hpp|c|cpp)$")
