--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -41,6 +41,7 @@ nvcuda_compile_ptx(
     "--use_fast_math"
     "--relocatable-device-code=true"
     "-I${OPTIX_INCLUDE_DIR}"
+    "-I${CMAKE_SOURCE_DIR}/ext/nanovdb"
 )
 
 nvcuda_compile_ptx(
